manifests/test/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: eplastapi
  labels:
    app: eplastapi  
spec:
  selector:
    matchLabels:
      app: eplastapi
  template:
    metadata:
      labels:
        app: eplastapi 
    spec:
      containers:
        - name: eplastapi 
          image: ___containerRegistry___/eplastapi:10286
        # resources:
        #    limits:
        #      cpu: "200m"
        #      memory: "100Mi"
          ports:
          - containerPort: 5000
          env:
          - name: ConnectionStrings__Redis
            value: "10.0.95.244:6379"
          - name: ConnectionStrings__EplastDatabase
            value: "Server=tcp:eplast.database.windows.net,1433;Initial Catalog=EPlast;Persist Security Info=False;User ID=Admin_EPlast;Password=Jm4<-z>X3K?B&YLz;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
          - name: ConnectionStrings__BlobStorage
            value: "DefaultEndpointsProtocol=https;AccountName=eplaststorage;AccountKey=AaMfm+wYcacPhE3JACqadhgVBTBRrHFjtUkdUBwYK6YjqU7x7ySP1i7mEbYeTtPORKYP6YZ9xevS+NfHv1Ug7w==;EndpointSuffix=core.windows.net"
          - name: JwtIssuerSigningKey
            value: "vKlLhnY8I4qZazGle4CIpnAROyuKYAyoRUENRFHUPhIEWk0yr91tz2faHEbm5vq4"
          - name: ConnectionStrings__EPlastDBConnection
            value: "Server=tcp:eplast.database.windows.net,1433;Initial Catalog=EPlast;Persist Security Info=False;UserID=Admin_EPlast;Password=Jm4<-z>X3K?B&YLz;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
          - name: StorageConnectionString
            value: "DefaultEndpointsProtocol=https;AccountName=eplaststorage;AccountKey=AaMfm+wYcacPhE3JACqadhgVBTBRrHFjtUkdUBwYK6YjqU7x7ySP1i7mEbYeTtPORKYP6YZ9xevS+NfHv1Ug7w==;EndpointSuffix=core.windows.net"
          - name: EmailServiceSettings__SMTPServerLogin
            value: "eplast.pysar@ukr.net"
          - name: EmailServiceSettings__SMTPServerPassword
            value: "yEiXc5aNj5sC261P"
          - name: Admin__Email
            value: "admin@eplast.com"
          - name: Admin__Password
            value: "Pq!83874"
          - name: GoogleAuthentication__GoogleClientId
            value: "710369145500-ur2qfp5292p16458pfvg4oieu7eqmca7.apps.googleusercontent.com"
          - name: GoogleAuthentication__GoogleClientSecret
            value: "ea7hGS--XPc-gOFcs1cuMKv5"
          - name: FacebookAuthentication__FacebookAppId
            value: "392908158421729"
          - name: FacebookAuthentication__FacebookAppSecret
            value: "f4caaed57da8d16e69346d8d52bebc52"           
---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: eplastapi-autoscaler
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: eplastapi
  targetCPUUtilizationPercentage: 70
  minReplicas: 1
  maxReplicas: 3
